Добавлены новые проекты, изменение стилей Portfolio. Переписан Readme. Прочие небольшие правки

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <meta
     name="description"
-    content="Портфолио моих проектов, информация обо мне для потенциальных работадателей"
+    content="Портфолио моих проектов и информация обо мне"
   >
-  <title>Сайт-портфолио Андрея Бурлакова</title>
+  <title>Портфолио Андрея Бурлакова</title>
 </head>
 <body class="body">
   <div class="root"></div>
