--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg">
-  <link rel="mask-icon" href="%PUBLIC_URL%/favicon.svg" color="#000000">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <meta
